# esp32-weather-kit

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/stepper-driver/: Cargo.toml
crates/stepper-driver/src/: lib.rs
examples/: can_exp.rs  can_read.rs  exp_delay.rs  exp_dht11.rs  exp_dht_intr.rs  exp_dht_me.rs  exp_dht_sensor.rs  exp_i2c_bh1750.rs  exp_i2c_bmp180.rs  exp_i2c_display.rs  exp_weather_kit.rs  hello_world.rs  stepper-a4988-exp.rs  sys_timer.rs  tmc2209_exp.rs  twai.rs
hardware/: fp-info-cache  fp-lib-table  freerouting.dsn  hardware.kicad_pcb  hardware.kicad_prl  hardware.kicad_pro  hardware.kicad_sch  sym-lib-table  temp-freerouting.dsn
hardware/gerber/: hardware-B_Cu.gbr  hardware-B_Mask.gbr  hardware-B_Paste.gbr  hardware-B_Silkscreen.gbr  hardware-Edge_Cuts.gbr  hardware-F_Cu.gbr  hardware-F_Mask.gbr  hardware-F_Paste.gbr  hardware-F_Silkscreen.gbr  hardware-NPTH.drl  hardware-PTH.drl  hardware-job.gbrjob
scripts/: counter.py
src/: backup.rs  bh1750.rs  bmp180.rs  dht11.rs  ets_delay.rs  lib.rs  shared_i2c.rs
