[package]
name = "hal-exp"
version = "0.1.0"
authors = ["Zephyr Guo <zephyr@atomi.ai>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.13.0"}
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32c3","log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
dht-sensor = "0.2"
dht11 = "0.3"
embedded-hal = "0.2"
esp-hal-common = { version = "0.13", features = ["esp32c3"]}
critical-section = "1.1"
heapless = "0.8"

embedded-graphics = "0.8"
ssd1306 = "0.8"
byteorder = { version = "1.5.0", default-features = false }

[profile.release]
opt-level = 3